tests/compile_fail/ignore_conflict.rs
#[skuld::test(ignore)]
#[ignore]
fn conflicting_ignore() {}

fn main() {}
